--- a/app/assets/stylesheets/videos/index/load_more.scss
+++ b/app/assets/stylesheets/videos/index/load_more.scss
@@ -9,12 +9,12 @@
   flex: 1;
   margin: 0 auto;
   color: rgb(96, 96, 96);
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .load-more-link {
   color: $primary-font-color;
-  font-size: .9rem;
+  font-size: 0.9rem;
   background-color: white;
   border: 1px solid $border-color-secondary;
   border-radius: 5px;
@@ -26,7 +26,7 @@
   &:hover {
     background-color: $border-color-secondary;
   }
-    .loading-animation {
+  .loading-animation {
     font-size: 0.35rem;
   }
 }
@@ -36,10 +36,14 @@
     padding: 20px 0 0 0;
   }
 
+  .load-more-results {
+    font-size: 14px;
+  }
+
   .load-more-link {
     width: 150px;
     margin: 20px auto 20px auto;
-    padding: 10px;
-    font-size: 17px;
+    padding: auto 0;
+    font-size: 14px;
   }
 }
